@@ -2,7 +2,7 @@
 # PostMaster.t - PostMaster tests
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: PostMaster.t,v 1.4 2007-05-07 08:24:25 martin Exp $
+# $Id: PostMaster.t,v 1.4.2.1 2007-12-13 01:57:53 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -14,7 +14,7 @@ use Kernel::System::PostMaster;
 use Kernel::System::Ticket;
 use Digest::MD5 qw(md5_hex);
 
-foreach my $Module (qw(DB FS)) {
+for my $Module (qw(DB FS)) {
     $Self->{ConfigObject}->Set(
         Key => 'LoopProtectionModule',
         Value => "Kernel::System::PostMaster::LoopProtection::$Module",
@@ -34,7 +34,7 @@ foreach my $Module (qw(DB FS)) {
         "#$Module - Check() - $UserRand1",
     );
 
-    foreach (1..42) {
+    for (1..42) {
         my $SendEmail = $Self->{LoopProtectionObject}->SendEmail(
             To => $UserRand1,
         );
@@ -54,20 +54,22 @@ foreach my $Module (qw(DB FS)) {
     );
 }
 
-#foreach my $NumberModule (qw(AutoIncrement DateChecksum Date Random)) {
-foreach my $NumberModule (qw(Random)) {
+for my $NumberModule (qw(AutoIncrement DateChecksum Date Random)) {
     $Self->{ConfigObject}->Set(
         Key => 'Ticket::NumberGenerator',
         Value => "Kernel::System::Ticket::Number::$NumberModule",
     );
-    foreach my $StorageModule (qw(ArticleStorageDB ArticleStorageFS)) {
+    for my $StorageModule (qw(ArticleStorageDB ArticleStorageFS)) {
         $Self->{ConfigObject}->Set(
             Key => 'Ticket::StorageModule',
             Value => "Kernel::System::Ticket::$StorageModule",
         );
+
         # get rand sender address
         my $UserRand1 = 'example-user'.int(rand(1000000)).'@example.com';
-        foreach my $File (qw(1 2 3 6)) {
+
+        for my $File (qw(1 2 3 6)) {
+
             # new ticket check
             my @Content = ();
             open(IN, "< ".$Self->{ConfigObject}->Get('Home')."/scripts/test/sample/PostMaster-Test$File.box") || die $!;
@@ -82,7 +84,7 @@ foreach my $NumberModule (qw(Random)) {
 
             # follow up check
             my @ContentNew = ();
-            foreach my $Line (@Content) {
+            for my $Line (@Content) {
                 push (@ContentNew, $Line);
             }
 
@@ -101,12 +103,14 @@ foreach my $NumberModule (qw(Random)) {
                 $Return[1] || 0,
                 "#$NumberModule $StorageModule $File Run() - NewTicket/TicketID",
             );
+
             # new/clear ticket object
             $Self->{TicketObject} = Kernel::System::Ticket->new(%{$Self});
             my %Ticket = $Self->{TicketObject}->TicketGet(TicketID => $Return[1]);
             my @ArticleIDs = $Self->{TicketObject}->ArticleIndex(
                 TicketID => $Return[1],
             );
+
             if ($File == 3) {
                 # check body
                 my %Article = $Self->{TicketObject}->ArticleGet(
@@ -140,6 +144,7 @@ foreach my $NumberModule (qw(Random)) {
 
             }
             if ($File == 6) {
+
                 # check body
                 my %Article = $Self->{TicketObject}->ArticleGet(
                     ArticleID => $ArticleIDs[0],
@@ -151,6 +156,7 @@ foreach my $NumberModule (qw(Random)) {
                     '2ac290235a8cad953a1837c77701c5dc',
                     "#$NumberModule $StorageModule $File md5 body check",
                 );
+
                 # check attachments
                 my %Index = $Self->{TicketObject}->ArticleAttachmentIndex(
                     ArticleID => $ArticleIDs[0],
@@ -177,7 +183,7 @@ foreach my $NumberModule (qw(Random)) {
 
             # send follow up #1
             @Content = ();
-            foreach my $Line (@ContentNew) {
+            for my $Line (@ContentNew) {
                 if ($Line =~ /^Subject:/) {
                     $Line = 'Subject: '.$Self->{TicketObject}->TicketSubjectBuild(
                         TicketNumber => $Ticket{TicketNumber},
@@ -200,6 +206,7 @@ foreach my $NumberModule (qw(Random)) {
                 $Return[1] || 0,
                 "#$NumberModule $StorageModule $File Run() - FollowUp/TicketID",
             );
+
             # new/clear ticket object
             $Self->{TicketObject} = Kernel::System::Ticket->new(%{$Self});
             %Ticket = $Self->{TicketObject}->TicketGet(TicketID => $Return[1]);
@@ -220,7 +227,7 @@ foreach my $NumberModule (qw(Random)) {
 
             # send follow up #2
             @Content = ();
-            foreach my $Line (@ContentNew) {
+            for my $Line (@ContentNew) {
                 if ($Line =~ /^Subject:/) {
                     $Line = 'Subject: '.$Self->{TicketObject}->TicketSubjectBuild(
                         TicketNumber => $Ticket{TicketNumber},
@@ -243,6 +250,76 @@ foreach my $NumberModule (qw(Random)) {
                 $Return[1] || 0,
                 "#$NumberModule $StorageModule $File Run() - FollowUp/TicketID",
             );
+
+            # send follow up #3
+            @Content = ();
+            for my $Line (@ContentNew) {
+                if ($Line =~ /^Subject:/) {
+                    $Line = 'Subject: '.$Self->{ConfigObject}->Get('Ticket::Hook').": $Ticket{TicketNumber}";
+                }
+                push (@Content, $Line);
+            }
+            $Self->{PostMasterObject} = Kernel::System::PostMaster->new(
+                %{$Self},
+                Email => \@Content,
+            );
+            @Return = $Self->{PostMasterObject}->Run();
+            $Self->Is(
+                $Return[0] || 0,
+                2,
+                "#$NumberModule $StorageModule $File Run() - FollowUp (Ticket::Hook#: xxxxxxxxxx)",
+            );
+            $Self->True(
+                $Return[1] || 0,
+                "#$NumberModule $StorageModule $File Run() - FollowUp/TicketID",
+            );
+
+            # send follow up #4
+            @Content = ();
+            for my $Line (@ContentNew) {
+                if ($Line =~ /^Subject:/) {
+                    $Line = 'Subject: '.$Self->{ConfigObject}->Get('Ticket::Hook').":$Ticket{TicketNumber}";
+                }
+                push (@Content, $Line);
+            }
+            $Self->{PostMasterObject} = Kernel::System::PostMaster->new(
+                %{$Self},
+                Email => \@Content,
+            );
+            @Return = $Self->{PostMasterObject}->Run();
+            $Self->Is(
+                $Return[0] || 0,
+                2,
+                "#$NumberModule $StorageModule $File Run() - FollowUp (Ticket::Hook#:xxxxxxxxxx)",
+            );
+            $Self->True(
+                $Return[1] || 0,
+                "#$NumberModule $StorageModule $File Run() - FollowUp/TicketID",
+            );
+
+            # send follow up #5
+            @Content = ();
+            for my $Line (@ContentNew) {
+                if ($Line =~ /^Subject:/) {
+                    $Line = 'Subject: '.$Self->{ConfigObject}->Get('Ticket::Hook')."$Ticket{TicketNumber}";
+                }
+                push (@Content, $Line);
+            }
+            $Self->{PostMasterObject} = Kernel::System::PostMaster->new(
+                %{$Self},
+                Email => \@Content,
+            );
+            @Return = $Self->{PostMasterObject}->Run();
+            $Self->Is(
+                $Return[0] || 0,
+                2,
+                "#$NumberModule $StorageModule $File Run() - FollowUp (Ticket::Hook#xxxxxxxxxx)",
+            );
+            $Self->True(
+                $Return[1] || 0,
+                "#$NumberModule $StorageModule $File Run() - FollowUp/TicketID",
+            );
+
             # new/clear ticket object
             $Self->{TicketObject} = Kernel::System::Ticket->new(%{$Self});
             %Ticket = $Self->{TicketObject}->TicketGet(TicketID => $Return[1]);
@@ -263,7 +340,7 @@ foreach my $NumberModule (qw(Random)) {
 
             # send follow up #3
             @Content = ();
-            foreach my $Line (@ContentNew) {
+            for my $Line (@ContentNew) {
                 if ($Line =~ /^Subject:/) {
                     $Line = 'Subject: '.$Self->{TicketObject}->TicketSubjectBuild(
                         TicketNumber => $Ticket{TicketNumber},
@@ -288,6 +365,7 @@ foreach my $NumberModule (qw(Random)) {
                 $Return[1] || 0,
                 "#$NumberModule $StorageModule $File Run() - FollowUp/TicketID",
             );
+
             # new/clear ticket object
             $Self->{TicketObject} = Kernel::System::Ticket->new(%{$Self});
             %Ticket = $Self->{TicketObject}->TicketGet(TicketID => $Return[1]);
@@ -309,4 +387,5 @@ foreach my $NumberModule (qw(Random)) {
         }
     }
 }
+
 1;
